--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -152,7 +152,7 @@
 					
 					<div class="desktop-top-nav hide-mobile hide-before-init">
 						<a href="/work"><u>We're hiring!</u></a>
-						<a href="/location">Home</a>
+						<a href="/">Home</a>
 						<a href="/help">Help</a>
 						<a href="/orders" ng-if="account.user.id_user">Account</a>
 						<a ng-click="navigation.signin()" ng-if="!account.user.id_user">Log In</a>
