--- a/include/views/default/crunchbutton/frontend/restaurants.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurants.phtml
@@ -46,6 +46,7 @@
 								<span ng-if="!restaurant._opensIn_formatted">Available in a few hours</span>
 							</div>
 							<div class="meal-item-tag-closed" ng-switch-when="force_close">Temporarily closed {{restaurant._closedDueTo}}</div>
+							<div class="meal-item-tag-closed" ng-switch-when="next_open">{{restaurant.next_open_time_message.message}}</div>
 						</div>
 					</div>
 				</div>
