--- a/include/views/default/seven/frontend/restaurants.phtml
+++ b/include/views/default/seven/frontend/restaurants.phtml
@@ -29,7 +29,7 @@
 							<span class="hide-desktop"><b>Push a button</b><br>Get food delivered</span>
 							<span class="hide-mobile">Choose a <br><b>restaurant</b></span>
 						</span>
-						
+
 					</div>
 					<div class="bubble-tail-spacer"></div>
 				</div>
@@ -73,7 +73,7 @@
 		<div class="divider"></div>
 	</div>
 	<div class="divider"></div>
-	
+
 </div>
 
 <div ng-if="restaurants">
@@ -106,6 +106,7 @@
 
 							<div ng-switch on="restaurant._tag">
 								<div class="meal-item-tag" ng-switch-when="takeout">Take out only</div>
+								<div class="meal-item-tag" ng-switch-when="next_open">{{restaurant.next_open_time_message.message}}</div>
 								<div class="meal-item-tag about-to-close" ng-switch-when="closing">Hurry, closes in {{restaurant._closesIn}} min!</div>
 								<div ng-switch-when="opening">
 									<div ng-if="restaurant._opensIn_formatted" class="meal-item-tag about-to-open"><span >Available {{restaurant._opensIn_formatted}}</span></div>
