--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -228,22 +228,26 @@ If you absolutely can’t find anyone yourself, it's important you give us 2 day
        <a name="moreHelp"></a>
             More Help
         </span><br>
-<b>I’m having difficulty using cockpit.la.</b><br>
-Try a different browser. On iOS devices, use Safari. On Android, use Chrome (not Firefox). If you’re still having issues, please text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> or email the specifics and a screenshot of the issue to <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a>.
-<br><br>
+        <b>I’m having difficulty using cockpit.la.</b><br>
+        Try a different browser. On iOS devices, use Safari. On Android, use Chrome (not Firefox). If you’re still having issues, please text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> or email the specifics and a screenshot of the issue to <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a>.
+        <br><br>
 
-<b>I found a bug with Crunchbutton or Cockpit. What should I do?</b><br>
-We hate bugs! Email us at <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a> with the exact details and pics if you can. If you tell us enough info to reproduce and fully fix the problem, we’d really appreciate it!<br><br>
+        <b>I found a bug with Crunchbutton or Cockpit. What should I do?</b><br>
+        We hate bugs! Email us at <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a> with the exact details and pics if you can. If you tell us enough info to reproduce and fully fix the problem, we’d really appreciate it!<br><br>
 
-<b>Can I change my cockpit password?</b><br>
-Sure, but right now we have to do it for you manually. Text us what you want us to change your password to at <a ng-click="callText('646-783-1444')">646-783-1444</a> .<br><br>
+        <b>Can I change my cockpit password?</b><br>
+        Sure, but right now we have to do it for you manually. Text us what you want us to change your password to at <a ng-click="callText('646-783-1444')">646-783-1444</a> .<br><br>
 
-<b>How does your insurance work?</b><br>
-Youbeo, Inc (Crunchbutton's parent company) has an insurance policy that will protect from liability claims arising from a motor vehicle collision during the course of business. The protection is up to $1,000,000 liability insurance policy that protects you against claims to third parties for injuries and property damage. This protection does not cover physical damage to any vehicle being used by a driver associated with Youbeo. Physical damage to any employee or subcontractor’s vehicle must be done through the individual's primary insurance company.<br><br>
+        <b>How does your insurance work?</b><br>
+        Youbeo, Inc (Crunchbutton's parent company) has an insurance policy that will protect from liability claims arising from a motor vehicle collision during the course of business. The protection is up to $1,000,000 liability insurance policy that protects you against claims to third parties for injuries and property damage. This protection does not cover physical damage to any vehicle being used by a driver associated with Youbeo. Physical damage to any employee or subcontractor’s vehicle must be done through the individual's primary insurance company.<br><br>
 
-<b>There’s something else I don’t understand!</b><br>
-Hey, we’re here to help. Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a>  and we’ll figure it out!<br><br>
-<!--end #moreHelp section-->
+        <b>Do you have an app for drivers?</b><br>
+        We will soon! Till then, if you have an iPhone, we recommend adding cockpit.la to your home screen - it works just like an app.
+        <br><br>
+
+        <b>There’s something else I don’t understand!</b><br>
+        Hey, we’re here to help. Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a>  and we’ll figure it out!<br><br>
+        <!--end #moreHelp section-->
 
     </p>
 </div>
