--- a/include/views/default/seven/frontend/restaurant.closed.phtml
+++ b/include/views/default/seven/frontend/restaurant.closed.phtml
@@ -6,7 +6,7 @@
 				<p>
 					
 					<span ng-if="!acceptingOrders">
-						<span ng-if="restaurant.delivery">is temporarily unavailable for delivery, but is usually available durring the following hours</span>
+						<span ng-if="restaurant.delivery">is temporarily unavailable for delivery, but is usually available during the following hours</span>
 						<span ng-if="!restaurant.delivery">is temporarily closed but is usually available during the following hours</span>
 					</span>
 					<span ng-if="acceptingOrders">
