--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -203,7 +203,7 @@
 						</div>
 
 						<div class="admin-item-right">
-							<input id="restaurant-message" type="input">
+							<input id="restaurant-message" type="input" maxlength="45">
 						</div>
 					</div>
 
