fixed column issue

--- a/include/views/default/seven/frontend/location.phtml
+++ b/include/views/default/seven/frontend/location.phtml
@@ -194,12 +194,12 @@
 	<br><br>
 	
 	
-	<div class="col-box">
+	<div class="col-box content-padding">
 		<div class="two-col">
 			<div class="location-map"></div>
 		</div>
 		<div class="two-col">
-			<div class="content-padding">
+
 				<h4>We’re expanding!</h4>
 				<p>We may not be everywhere yet, but the communities we are in love us! Browse some of the food from or most popular locations:</p>
 				<br /><br /><br />
@@ -208,7 +208,7 @@
 						<a href ng-click="openCity(alias.alias)" permalink="{{alias.alias}}">{{alias.name}}</span>
 					</span>
 				</p>
-			</div>
+			
 		</div>
 	</div>
 </div>
