--- a/include/views/default/crunchbutton/frontend/restaurant.closed.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.closed.phtml
@@ -7,10 +7,10 @@
 				<span ng-if="!restaurant.delivery">is temporarily closed but is usually available during the following hours</span>
 			</span>
 			<span ng-if="acceptingOrders">
-				<span ng-if="restaurant.delivery">is currently unavailable for delivery. Delivery is available during the following hours</span>
+				<span ng-if="restaurant.delivery">is currently unavailable for delivery. Delivery will be available:</span>
 				<span ng-if="!restaurant.delivery">is currently closed. It will be open during the following hours</span>
 			</span>
-			&nbsp;(<span ng-bind="restaurant._tzabbr"></span>):<br /><br />
+<!--			&nbsp;(<span ng-bind="restaurant._tzabbr"></span>):--><br /><br />
 			<span ng-bind-html-unsafe="closedMessage"></span>
 		</p>
 	</div>
