--- a/include/views/default/cockpit/drivers/shift/summary/shift.phtml
+++ b/include/views/default/cockpit/drivers/shift/summary/shift.phtml
@@ -1,3 +1,12 @@
+<style>
+	.btn-green{
+		width: 20em;
+		height: 6em;
+		top: 90%;
+		left: 80%;
+		position:fixed;
+	}
+</style>
 <?php
 	$shift = $this->shift;
 ?>
