ui2 desktop shit

--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -31,7 +31,9 @@
 
 
 		<!-- main-content-readable-margin -->
+		
 		<div class="restaurant-content-body content-padding">
+			<div class="restaurant-content-body-background"></div>
 
 			<div class="restaurant-comment" ng-if="restaurant.comment">
 				<div class="restaurant-comment-wrap">
@@ -159,7 +161,7 @@
 					</div>
 					
 					<br>
-					<button class="button green" ng-click="fullmenu=0">less food</button>						
+					<button class="button green hide-desktop" ng-click="fullmenu=0">less food</button>						
 
 				</div>
 
