Make round trip of serialization string work

--- a/include/views/default/cockpit2/frontend/metrics/metrics.phtml
+++ b/include/views/default/cockpit2/frontend/metrics/metrics.phtml
@@ -76,4 +76,4 @@
 		</div>
 	</div>
 </div>
-<small>persistence: {{persistenceString}}</small>
+<small>persistence: {{persistenceString}}. round tripped: {{roundTrippedString}}</small>
