Include (zeroed) data for inactive communities
Always send a row of zeroed data for inactive communities, so that front
end can choose how to handle missing data (rather than having to
construct it itself).

Adds setting to display to toggle option on/off.

Closes #4914.

--- a/include/views/default/cockpit2/frontend/metrics/metrics.phtml
+++ b/include/views/default/cockpit2/frontend/metrics/metrics.phtml
@@ -39,6 +39,7 @@
 				</tbody>
 			</table>
 			<button ng-click='toggleCombinedView()' ng-switch on='settings.separateCharts'><span ng-switch-when='true'>Combine Charts</span><span ng-switch-when='false'>Split Charts</span></button>
+			<div><input type='checkbox' ng-model='settings.showEmpty' ng-change='showEmptyChanged()'>Show Empty Charts</input></div>
 			</div>
 		</form>
 	</div>
