Update angular chart so that the watches actually work
Options were not updating because the watches were incorrect.

That said, this raises the issue of huge copies when data is large.
We'll have to deal with that in the future (probably by forking
angular-charts and settings $scope.$watch to false and manipulating
object equality ourselves).

NOTE: We switched to use object equality instead (so we can manage memory better)

This appears to have resolved #4874 as well as fix scale changes.

--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -28,7 +28,7 @@
 <script src="/assets/cockpit/js/angular-hotkeys.min.js"></script>
 <script src="/assets/cockpit/js/angular-google-maps.min.js"></script>
 <script src="/assets/cockpit/js/favico.min.js"></script>
-<script src="/assets/cockpit/js/angular-chart.js"></script>
+<script src="/assets/cockpit/js/angular-chart.min.js"></script>
 <script src="/assets/cockpit/js/angular-multi-select.js"></script>
 
 <script src="/assets/js/snap.js"></script>
